# BPC-prp-2026

./: README.md
BPC-PRP/: CMakeLists.txt  package.xml
BPC-PRP/include/: RosExampleClass.hpp  helper.hpp  kinematic.hpp  kinematics.hpp  odometry.hpp
BPC-PRP/include/algorithms/: LidarFilterResults.hpp  PlanarImuIntegrator.hpp  aruco_detector.hpp  line_estimator.hpp
BPC-PRP/include/loops/: corridor_loop.hpp  line_loop.hpp  maze_loop.hpp
BPC-PRP/include/nodes/: Line_node.hpp  camera_node.hpp  imu_node.hpp  io_node.hpp  lidar_node.hpp  motor_node.hpp
BPC-PRP/src/: kinematic.cpp  kinematics.cpp  main.cpp  odometry.cpp
BPC-PRP/src/algorithms/: line_estimator.cpp
BPC-PRP/src/loops/: corridor_loop.cpp  line_loop.cpp  maze_loop.cpp
BPC-PRP/src/nodes/: Line_node.cpp  camera_node.cpp  imu_node.cpp  io_node.cpp  lidar_node.cpp  motor_node.cpp
BPC-PRP/tests/: CMakeLists.txt  t_example.cpp  t_kinematics.cpp  t_line_estimator.cpp  t_pid.cpp
